--- a/CSUEB-html/scss/components/_text-img-sec.scss
+++ b/CSUEB-html/scss/components/_text-img-sec.scss
@@ -741,7 +741,7 @@
     }
 
     ul {
-      padding-left: rem.convert(16px) !important;
+      padding-left: rem.convert(16px);
       margin: 0 !important;
 
       li {
@@ -2093,8 +2093,9 @@
           overflow-x: auto;
           padding-bottom: rem.convert(5px);
           position: relative;
+          padding-left: 0 !important;
+          padding-bottom: rem.convert(12px);
 
-          @include media-breakpoint-up(md) {
             &::-webkit-scrollbar-track {
               -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
               border-radius: rem.convert(10px);
@@ -2103,28 +2104,22 @@
 
             &::-webkit-scrollbar {
               width: rem.convert(10px);
-              height: rem.convert(4px);
+              height: rem.convert(8px);
               background-color: #f5f5f500;
             }
 
             &::-webkit-scrollbar-thumb {
               border-radius: rem.convert(10px);
               -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-              background-color: #464646;
+              background-color: white;
             }
-          }
+          
 
           @include media-breakpoint-down(md) {
-
-            // Hide scrollbar but keep scrolling functionality
             &::-webkit-scrollbar {
-              display: none;
+              height: rem.convert(6px);
             }
-
-            // Firefox - hide scrollbar
-            scrollbar-width: none;
-            // IE/Edge - hide scrollbar
-            -ms-overflow-style: none;
+            
           }
 
           li {
