--- a/CSUEB-html/styles.css
+++ b/CSUEB-html/styles.css
@@ -5382,7 +5382,7 @@ html[hc=a4] .img-verlap-link-sec .img-verlap-link-card .overlay .news-content .b
   text-decoration: underline !important;
 }
 .text-img-main-card .bottom-content-sec ul {
-  padding-left: 1rem !important;
+  padding-left: 1rem;
   margin: 0 !important;
 }
 .text-img-main-card .bottom-content-sec ul li {
@@ -6461,31 +6461,27 @@ html[hc=a4] .img-verlap-link-sec .img-verlap-link-card .overlay .news-content .b
   overflow-x: auto;
   padding-bottom: 0.3125rem;
   position: relative;
+  padding-left: 0 !important;
+  padding-bottom: 0.75rem;
 }
-@media (min-width: 768px) {
-  .faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 0.625rem;
-    background-color: rgba(245, 245, 245, 0);
-  }
-  .faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar {
-    width: 0.625rem;
-    height: 0.25rem;
-    background-color: rgba(245, 245, 245, 0);
-  }
-  .faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar-thumb {
-    border-radius: 0.625rem;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #464646;
-  }
+.faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 0.625rem;
+  background-color: rgba(245, 245, 245, 0);
+}
+.faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar {
+  width: 0.625rem;
+  height: 0.5rem;
+  background-color: rgba(245, 245, 245, 0);
+}
+.faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar-thumb {
+  border-radius: 0.625rem;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: white;
 }
 @media (max-width: 767.98px) {
-  .faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
   .faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item::-webkit-scrollbar {
-    display: none;
+    height: 0.375rem;
   }
 }
 .faculty-experts-litsing-sec .text-img-main-card .bottom-content-sec .expert-tags-sec .tag-item li {
@@ -7321,31 +7317,27 @@ body:has(.home-hero-sec) .main-header > .container {
   overflow-x: auto;
   padding-bottom: 0.3125rem;
   position: relative;
+  padding-left: 0 !important;
+  padding-bottom: 0.75rem;
 }
-@media (min-width: 768px) {
-  .tags-wrap-yellow .tag-item::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
-    border-radius: 0.625rem;
-    background-color: transparent;
-  }
-  .tags-wrap-yellow .tag-item::-webkit-scrollbar {
-    width: 0.625rem;
-    height: 0.25rem;
-    background-color: transparent;
-  }
-  .tags-wrap-yellow .tag-item::-webkit-scrollbar-thumb {
-    border-radius: 0.625rem;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
-    background-color: var(--gold-10, rgba(253, 193, 90, 0.308));
-  }
+.tags-wrap-yellow .tag-item::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  border-radius: 0.625rem;
+  background-color: transparent;
+}
+.tags-wrap-yellow .tag-item::-webkit-scrollbar {
+  width: 0.625rem;
+  height: 0.5rem;
+  background-color: transparent;
+}
+.tags-wrap-yellow .tag-item::-webkit-scrollbar-thumb {
+  border-radius: 0.625rem;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  background-color: var(--gold-10, rgba(253, 193, 90, 0.308));
 }
 @media (max-width: 767.98px) {
-  .tags-wrap-yellow .tag-item {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
   .tags-wrap-yellow .tag-item::-webkit-scrollbar {
-    display: none;
+    height: 0.375rem;
   }
 }
 .tags-wrap-yellow .tag-item li {
